--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.10.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "15.3.4",
     "next-intl": "^4.3.1",
